[MW-36] Implemented responsive footer and fixed spacing section

--- a/src/styles/components/common/_section.scss
+++ b/src/styles/components/common/_section.scss
@@ -6,7 +6,7 @@
   padding-top: 9.6rem;
 
   @include breakpoint-up(large) {
-    padding-top: 12rem;
+    padding-top: 13.6rem;
   }
 }
 
@@ -14,6 +14,6 @@
   margin-top: 4rem;
 
   @include breakpoint-up(large) {
-    margin-top: 6.4rem;
+    margin-top: 5.6rem;
   }
 }
