--- a/src/styles/components/common/buttons/_button-secondary.scss
+++ b/src/styles/components/common/buttons/_button-secondary.scss
@@ -7,7 +7,7 @@
   color: $clr-royal-blue;
 
   &:hover {
-    background: darken($clr-royal-blue, 10%);
-    color: $clr-white;
+    background: $clr-perano;
+    color: $clr-royal-blue;
   }
 }
