--- a/src/styles/components/layout/footer/_footer.scss
+++ b/src/styles/components/layout/footer/_footer.scss
@@ -5,4 +5,20 @@
 .footer {
   margin-top: 9.6rem;
   margin-bottom: 4rem;
+
+  @include breakpoint-up(large) {
+    margin-top: 13.6rem;
+  }
+}
+
+.footer__group {
+  @include breakpoint-up(large) {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &:last-child {
+    margin-top: 1.6rem;
+  }
 }
